RESOLVED FIXED111450
GetnUniform*vEXT (Robustness extension) passed incorrect parameter in WebGLRenderingContext
https://bugs.webkit.org/show_bug.cgi?id=111450
Summary GetnUniform*vEXT (Robustness extension) passed incorrect parameter in WebGLRe...
R S
Reported 2013-03-05 09:39:55 PST
According to the robustness spec, GetnUniform*vEXT expects a parameter "sizei bufSize" which sets the number of bytes to be written. In the current implementation they pass the maximum number of entries that can be written instead of the amount of bytes.
Attachments
Patch (3.01 KB, patch)
2013-03-05 11:16 PST, R S
no flags
Patch (3.05 KB, patch)
2013-03-06 07:55 PST, R S
no flags
Patch (3.06 KB, patch)
2013-03-06 09:54 PST, R S
no flags
R S
Comment 1 2013-03-05 11:16:33 PST
R S
Comment 2 2013-03-06 07:55:11 PST
R S
Comment 3 2013-03-06 09:54:38 PST
Rob Buis
Comment 4 2013-03-06 11:10:42 PST
Comment on attachment 191779 [details] Patch Is there some scenario where the problem is shown? Ideal would be if there was a test showing the problem.
R S
Comment 5 2013-03-06 12:13:29 PST
It showed up in the DRT test fast/canvas/webgl/gl-object-get-calls.html
Rob Buis
Comment 6 2013-03-07 11:28:20 PST
(In reply to comment #5) > It showed up in the DRT test fast/canvas/webgl/gl-object-get-calls.html What effect does your change have on this test? Is it an improvement? If the test result is different you may need to add the new test result to your patch.
R S
Comment 7 2013-03-11 10:40:35 PDT
There is no change to the actual test.
Rob Buis
Comment 8 2013-03-11 11:32:16 PDT
(In reply to comment #7) > There is no change to the actual test. Ok, then we need to go back to your earlier remark: > It showed up in the DRT test fast/canvas/webgl/gl-object-get-calls.html How did it show up, as a warning?
Rob Buis
Comment 9 2013-03-11 12:42:12 PDT
Comment on attachment 191779 [details] Patch Ok.
WebKit Review Bot
Comment 10 2013-03-11 12:52:11 PDT
Comment on attachment 191779 [details] Patch Clearing flags on attachment: 191779 Committed r145387: <http://trac.webkit.org/changeset/145387>
WebKit Review Bot
Comment 11 2013-03-11 12:52:15 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.