GetnUniform*vEXT (Robustness extension) passed incorrect parameter in WebGLRenderingContext https://bugs.webkit.org/show_bug.cgi?id=111450

Patch by Rajeev Sarvaria <rsarvaria@blackberry.com> on 2013-03-11
Reviewed by Rob Buis.

Bufsize argument corrected to size in bytes instead of number of integers or floats.

* html/canvas/WebGLRenderingContext.cpp:
(WebCore):
(WebCore::WebGLRenderingContext::getUniform):

Canonical link: https://commits.webkit.org/130340@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@145387 268f45cc-cd09-0410-ab3c-d52691b4dbfc